add preload in feed

--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -90,8 +90,9 @@
 		</div> -->
 		<div class="feed-inner">
 			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
-			<div class="loader extra-small gray loading hide"></div>
 		</div>
+
+		<div class="loader extra-small gray hide loading"></div>
 	</div>
 
 	<div id="fb-root"></div>
