--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
+	<meta description="Unete a la primera red social de artistas emergentes y almas independientes en Latinoamérica"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
 	{% if pageTitle %}
