--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -90,7 +90,7 @@
             <form class="content review-form">
               <input type="hidden" name='idPost' value="{{ post.id }}"/>
               <textarea class='value-input' name="value"></textarea>
-              <button>AGREGAR REVIEW</button>
+              <button>AGREGAR COMENTARIO</button>
             </form>
           </div>
         {% else %}
