--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -113,14 +113,11 @@
 
   <div class="grid-container u-margin-top-10">
     <div class="grid-100 grid-parent">
-      <div class="blog-articles-container container-2">
+      <div class="blog-articles-container articles-container">
       </div>
     </div>
   </div>
-
-  <div class="grid-100 u-padding-top-30 u-padding-bottom-30">
-    <a class="am-More-button" style="display: table; margin: auto; min-width: 150px;">Ver más</a>
-  </div>
+  <div class="grid-100 u-padding-top-30 u-padding-bottom-30"></div>
 
 {% endblock %}
 
@@ -128,10 +125,8 @@
 {% block scripts %}
   <script>
   var posts = {{data|json|safe}};
-  var featureds = {{featureds|json|safe}};
-  console.log(posts);
   $(function() {
-    var viewer = new APP.Viewer('post', $('.container-2'), 'infinite', posts);
+    new APP.BlogScreen();
   });
   </script>
 {% endblock %}
