backgound in cover post

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4154,6 +4154,7 @@ white = #fff
 	align-items: center;
 	position relative
 	overflow hidden
+	background rgba(black, .3)
 
 	.am-Profile-banner-img
 		position absolute
