add preload to index blog

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -117,7 +117,9 @@
       </div>
     </div>
   </div>
-  <div class="grid-100 u-padding-top-30 u-padding-bottom-30"></div>
+  <div class="grid-100 u-padding-top-30 u-padding-bottom-30">
+    <div class="loader extra-small gray"></div>
+  </div>
 
 {% endblock %}
 
