--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -138,30 +138,11 @@
 	    ]
 	  };
 	</script>
-	<script src="/js.cookie.js"></script>
-	<script src="/adapt.min.js"></script>
-	<script src="/clipboard.min.js"></script>
-	<script src="/EventDispatcher.js"></script>
-	<script src="/jquery-2.1.1.min.js"></script>
-	<script src="/hammer.min.js"></script>
-	<script src="/slider.js"></script>
-	<script src="/jquery.maskedinput.js"></script>
-	<script src="/moment.js"></script>
-	<script src='/app.min.js'></script>
-	<script src="/imagesloaded.pkgd.min.js"></script>
-	<script src="/masonry.pkgd.min.js"></script>
-	<script src="/jquery.leanModal.min.js"></script>
-	<script src='/jquery.tagsinput.js'></script>
-	<script src='/jquery.ui.widget.js'></script>
-	<script src='/jquery.iframe-transport.js'></script>
-	<script src='/jquery.fileupload.js'></script>
-	<script src='/jquery.cloudinary.js'></script>
-	<script src='/broadcaster.js'></script>
 
 	<script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/handlebars/handlebars.runtime.min.js"></script>
-	<script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
-	<script src="/medium-editor-insert-plugin.js"></script>
 
+	<script src='/vendor.min.js'></script>
+	<script src='/app.min.js'></script>
 
 	{% include 'elements/work.html' %}
 	{% include 'elements/user.html' %}
