--- a/app/views/blog/category.html
+++ b/app/views/blog/category.html
@@ -41,7 +41,7 @@
   <script>
   var posts = {{posts|json|safe}};
   $(function() {
-    var viewer = new APP.Viewer('post', $('.container-2'), 'infinite', posts);
+    var viewer = new APP.Viewer('post', $('.articles-container'), 'infinite', posts);
   });
   </script>
 {% endblock %}
