--- a/app/views/partials/report.html
+++ b/app/views/partials/report.html
@@ -1,19 +1,15 @@
+{% set withoutHeader = true %}
+{% set withoutFooter = true %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.ico">
-    <title>Reportes |  Arte Manifiesto</title>
+{% extends './base.html' %}
 
-  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="/css/report/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/css/bootstrap-datepicker.min.css" rel="stylesheet">
-    <link href="/css/report/dashboard.css" rel="stylesheet">
-  </head>
+{% block styles %}
+  <link href="/css/report/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/report/bootstrap-datepicker.min.css" rel="stylesheet">
+  <link href="/css/report/dashboard.css" rel="stylesheet">
+{% endblock %}
 
-  <body>
+{% block elements %}
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -36,6 +32,8 @@
       </div>
     </nav>
 
+    <div class="u-separator" style="background: #eee;"></div>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12 main">
@@ -43,45 +41,4 @@
         </div>
       </div>
     </div>
-
-
-
-    	<script>
-    	  var ADAPT_CONFIG = {
-    	    path: '/',
-    	    dynamic: true,
-    	    range: [
-    	      '0 to 767px = unsemantic-grid-mobile.css',
-    	      '767px = unsemantic-grid-desktop.css'
-    	    ]
-    	  };
-    	</script>
-
-      {% include '../partials/elements/table-user-item.html' %}
-      {% include '../partials/elements/table-work-item.html' %}
-
-    	<script src="/js.cookie.js"></script>
-    	<script src="/adapt.min.js"></script>
-    	<script src="/clipboard.min.js"></script>
-    	<script src="/EventDispatcher.js"></script>
-    	<script src="/jquery-2.1.1.min.js"></script>
-    	<script src="/hammer.min.js"></script>
-    	<script src="/slider.js"></script>
-    	<script src="/jquery.maskedinput.js"></script>
-    	<script src="/moment.js"></script>
-    	<script src='/app.min.js'></script>
-    	<script src="/imagesloaded.pkgd.min.js"></script>
-    	<script src="/masonry.pkgd.min.js"></script>
-    	<script src="/jquery.leanModal.min.js"></script>
-    	<script src='/jquery.tagsinput.js'></script>
-    	<script src='/jquery.ui.widget.js'></script>
-    	<script src='/jquery.iframe-transport.js'></script>
-    	<script src='/jquery.fileupload.js'></script>
-    	<script src='/jquery.cloudinary.js'></script>
-
-      <script src="/bootstrap.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.min.js"></script>
-
-    {% block scripts %} {% endblock %}
-  </body>
-</html>
+{% endblock %}
