admin general and users

--- a/app/views/report/users.html
+++ b/app/views/report/users.html
@@ -73,113 +73,9 @@
 
 {% block scripts %}
 <script>
-  var users = {{data|json|safe}};
-  var viewer , term, start, end;
-  var options = {format: 'mm/dd/yyyy', clearBtn: true};
-
+  var data = {{data|json|safe}};
   $(function() {
-    if(Utils.getUrlParameter('start')) {
-      var startValue  = Utils.getUrlParameter('start');
-      start = new Date(startValue);
-      $('.start').find('input').val(startValue.replace(/-/gi, '/'));
-    };
-
-    if(Utils.getUrlParameter('end')) {
-      var endValue  = Utils.getUrlParameter('end');
-      end = new Date(endValue);
-      $('.end').find('input').val(endValue.replace(/-/gi, '/'));
-    };
-
-    $('.start').datepicker(options).on('changeDate', function(e) {
-      start = e.date;
-    });
-
-    $('.end').datepicker(options).on('changeDate', function(e) {
-      end = e.date;
-    });
-
-    $('.search-btn').click(function() {
-      var termValue = $('.search-box').val().trim();
-
-      if(term && term.trim().length > 0) {
-
-        if(term === 'isArtist' || term === 'verified' || term === 'filled' ) {
-          if(isNaN(parseInt(termValue, 10))) return alert('El valor necesita ser 1 o 0');
-        }
-
-        if(termValue.length > 0) {
-          DataApp.currentUrl = Utils.updateQueryStringParameter(DataApp.currentUrl, 'term', term);
-          DataApp.currentUrl = Utils.updateQueryStringParameter(DataApp.currentUrl, 'termValue', termValue);
-        } else {
-          DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'term');
-          DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'termValue');
-        }
-      }else {
-        DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'term');
-        DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'termValue');
-
-        if(termValue.length > 0) {
-          return alert('Necesitas seleccionar una propiedad');
-        }
-      }
-
-      if(start) {
-        if(!end) {
-          return alert('Ingresa una fecha de fin');
-        }
-        var startStr = (start.getMonth()+1) + "-" + start.getDate()  + "-" + start.getFullYear();
-        DataApp.currentUrl = Utils.updateQueryStringParameter(DataApp.currentUrl, 'start', startStr);
-      }else {
-        DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'start');
-      }
-
-      if(end) {
-        if(!start) {
-          return alert('Ingresa una fecha de inicio');
-        }
-        var endStr = (end.getMonth()+1) + "-" + end.getDate()  + "-" + end.getFullYear();
-        DataApp.currentUrl = Utils.updateQueryStringParameter(DataApp.currentUrl, 'end', endStr);
-      }else {
-        DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'end');
-      }
-
-      if(DataApp.currentUrl === window.location.href) return;
-
-      Utils.changeUrl(this.id, DataApp.currentUrl);
-      viewer.reset();
-    });
-
-    viewer = new APP.Viewer('tableUser', $('.container-items'), 'infinite', users , {
-      getTotal: function(total) {
-        $('.total').text('(' + total + ')');
-      }
-    });
-
-    $(".dropdown-menu li a").click(function() {
-      var text = $(this).text();
-
-      $(".btn-drop .property").text(text);
-      $(".btn-drop .property").val(text);
-
-      switch(text) {
-        case 'username':term = 'username';break;
-        case 'email':term = 'email';break;
-        case 'ciudad':term = 'city';break;
-        case 'pais':term = 'country';break;
-        case 'artista':term = 'isArtist';break;
-        case 'verificado':term = 'verified';break;
-        case 'completo':term = 'filled';break;
-      }
-    });
-
-    if(Utils.getUrlParameter('term')) {
-      term = Utils.getUrlParameter('term');
-      $('.' + term).click();
-    }
-
-    if(Utils.getUrlParameter('termValue')) {
-      $('.search-box').val(decodeURI(Utils.getUrlParameter('termValue')));
-    }
+    new APP.AdminUsersScreen();
   });
 
 </script>
