--- a/app/views/report/general.html
+++ b/app/views/report/general.html
@@ -53,56 +53,8 @@
 
 {% block scripts %}
 <script>
-  var data = {{data|json|safe}};
-  var viewer , term, start, end;
-  var options = {format: 'mm/dd/yyyy', clearBtn: true};
-
   $(function() {
-    if(Utils.getUrlParameter('start')) {
-      var startValue  = Utils.getUrlParameter('start');
-      start = new Date(startValue);
-      $('.start').find('input').val(startValue.replace(/-/gi, '/'));
-    };
-
-    if(Utils.getUrlParameter('end')) {
-      var endValue  = Utils.getUrlParameter('end');
-      end = new Date(endValue);
-      $('.end').find('input').val(endValue.replace(/-/gi, '/'));
-    };
-
-    $('.start').datepicker(options).on('changeDate', function(e) {
-      start = e.date;
-    });
-
-    $('.end').datepicker(options).on('changeDate', function(e) {
-      end = e.date;
-    });
-
-    $('.search-btn').click(function() {
-      if(start) {
-        if(!end) {
-          return alert('Ingresa una fecha de fin');
-        }
-        var startStr = (start.getMonth()+1) + "-" + start.getDate()  + "-" + start.getFullYear();
-        DataApp.currentUrl = Utils.updateQueryStringParameter(DataApp.currentUrl, 'start', startStr);
-      }else {
-        DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'start');
-      }
-
-      if(end) {
-        if(!start) {
-          return alert('Ingresa una fecha de inicio');
-        }
-        var endStr = (end.getMonth()+1) + "-" + end.getDate()  + "-" + end.getFullYear();
-        DataApp.currentUrl = Utils.updateQueryStringParameter(DataApp.currentUrl, 'end', endStr);
-      }else {
-        DataApp.currentUrl = Utils.removeURLParameter(DataApp.currentUrl, 'end');
-      }
-
-      if(DataApp.currentUrl !== window.location.href)
-        window.location.href = DataApp.currentUrl;
-    });
+    new APP.AdminGeneralScreen();
   });
-
 </script>
 {% endblock %}
