add changes in blog

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4245,6 +4245,8 @@ white = #fff
 		font-family: 'Montserrat',sans-serif;
 		font-size 12px
 		color #cdd7d8
+		&.liked
+			color #FC636B
 
 	.share
 		font-family: 'Montserrat',sans-serif;
@@ -4335,6 +4337,7 @@ white = #fff
 		border-radius 4px
 		border solid 1px #ddd
 		margin-left 20px
+		cursor pointer
 
 .blog-single-popular
 	background #27282a
