--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -11,14 +11,14 @@
         <div class="logo">am <span>blog</span></div>
         <div class="menu">
           {% for category in categories %}
-            <a href="/blog/category/{{category.nameSlugify}}" class="item">{{category.name}}</a>
+            <a href="/blog/category/{{category.nameSlugify}}" class="item uppercase">{{category.name}}</a>
           {% endfor %}
         </div>
         <div class="socials">
           <p>Síguenos:</p>
-          <a href="#" class="bi_logo-facebook"></a>
-          <a href="#" class="bi_logo-twitter"></a>
-          <a href="#" class="bi_logo-instagram"></a>
+          <a href="https://www.facebook.com/artemanifiesto" class="bi_logo-facebook"></a>
+          <a href="https://twitter.com/artemanifiesto" class="bi_logo-twitter"></a>
+          <a href="https://www.instagram.com/artemanifiesto/" class="bi_logo-instagram"></a>
           <a href="#" class="bi_web-rss"></a>
         </div>
       </header>
