add blog changes

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -163,7 +163,7 @@ white = #fff
 	&-items
 		white-space nowrap
 		font-size 0
-		overflow hidden
+		// overflow hidden
 	&-item
 		display inline-block
 		vertical-align top
@@ -4015,9 +4015,10 @@ white = #fff
 
 .blog-article
 	box-shadow 0 2px 4px 0 rgba(black, .5)
-	overflow hidden
+	// overflow hidden
 	margin 10px
 	background white
+	position relative
 	.header
 		display flex
 		position relative
