--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -62,37 +62,6 @@
       </div>
     </div>
 
-
-      <!-- <p>
-          estado : <span class="status">Inicio</span>
-      </p> -->
-
-
-      <!-- <div class="uploader-work">
-        <div class="profile-imgage">
-          <div class="preview">
-          </div>
-        </div>
-        <div class="preload hide"><i class="fa fa-spinner"></i></div>
-        <button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
-      </div> -->
-      <!-- <div class="image-uploader" style="position:relative;">
-          {{ cloudinary.uploader.image_upload_tag('cover', {callback: cloudinary_cors, return_delete_token: true, html: {
-          style: "width:230px;height:55px;top:-70px;left: 105px;", class:'editor-cover' } })}}
-      </div> -->
-
-      <!-- </br> -->
-
-      <!-- <select class="input select" name='category'>
-        <option disabled selected>Selecciona una Categoria</option>
-        {% for category in categories %}
-          <option value="{{category.id}}">{{category.name}}</option>
-        {% endfor %}
-      </select>
-      </br> -->
-
-      <!-- <input type="text" name="name" placeholder="Titulo del post"> -->
-
       <div id="container">
           {{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: {
           style: "width:230px;height:55px;top:-70px;left: 105px;", multiple:1, class:'editor-photos' } })}}
@@ -103,6 +72,14 @@
           </div>
       </div>
 
+  </div>
+
+  <div class="grid-container">
+    <div class="grid-100">
+      <div class="blog-single-user">
+        <a class="button following">ELIMINAR</a>
+      </div>
+    </div>
   </div>
 
 {% endblock %}
