--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -55,7 +55,7 @@
     <div class="grid-100">
       <div class="blog-single-socials">
         <div class="buttons">
-          <a class="button white like-btn"><i class="fa fa-heart"></i>&nbsp;&nbsp; LIKE
+          <a href="#" class="button white like-btn"><i class="fa fa-heart"></i>&nbsp;&nbsp; LIKE
             &nbsp;&nbsp;<span class="likes">{{ post.likes }}</span></a>
           <a href="#" class="button blue"><i class="fa fa-facebook"></i>&nbsp;&nbsp; SHARE</a>
           <a href="#" class="button sky-blue"><i class="fa fa-twitter"></i>&nbsp;&nbsp; TWEET</a>
@@ -107,8 +107,8 @@
             </form>
           </div>
         {% else %}
-          <p class="empty-profile-text  empty-message bare-message u-margin-top-30" style="display: block;">
-            <a class="login-review">Logeate, para agregar comentario</a>
+          <p class="empty-profile-text  empty-message bare-message u-margin-top-30" style="display: block; margin-bottom: 40px;">
+            <a href="#" clas class="login-review">Logeate, para agregar comentario</a>
           </p>
         {% endif %}
       </div>
