--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -77,7 +77,7 @@
   <div class="grid-container">
     <div class="grid-100">
       <div class="blog-single-user">
-        <a class="button following">ELIMINAR</a>
+        <a class="button following trash">ELIMINAR</a>
       </div>
     </div>
   </div>
