--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -55,7 +55,7 @@
     <div class="grid-100">
       <div class="blog-single-socials">
         <div class="buttons">
-          <a href="#" class="button white like-btn"><i class="fa fa-heart"></i>&nbsp;&nbsp; LIKE
+          <a href="#" class="button white like-btn liked"><i class="fa fa-heart"></i>&nbsp;&nbsp; LIKE
             &nbsp;&nbsp;<span class="likes">{{ post.likes }}</span></a>
           <a href="#" class="button blue"><i class="fa fa-facebook"></i>&nbsp;&nbsp; SHARE</a>
           <a href="#" class="button sky-blue"><i class="fa fa-twitter"></i>&nbsp;&nbsp; TWEET</a>
