--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -74,6 +74,7 @@
 
   </div>
 
+  {% if edit %}
   <div class="grid-container">
     <div class="grid-100">
       <div class="blog-single-user">
@@ -81,6 +82,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
 
 {% endblock %}
 
