--- a/app/views/partials/elements/post.html
+++ b/app/views/partials/elements/post.html
@@ -1,8 +1,14 @@
 <script type="text/template" id="template-post">
     <div class="blog-article-container">
-      <a href="/blog/post/<%=nameSlugify%>">
       <article class="blog-article">
-          <div class="featured disabled">AM</div>
+        <% if (viewer && viewer.isAdmin) { %>
+          <div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+        <% } else { %>
+          <% if (featured) { %>
+            <div class="featured">AM</div>
+          <% } %>
+        <% } %>
+        <a href="/blog/post/<%=nameSlugify%>">
           <header class="header" style="background-image: url('<%= addFilter(photo, 'w_380,h_260,c_fill') %>')">
             <span class="tag"><%= Category.name %></span>
             <div class="inner">
@@ -26,7 +32,7 @@
               <% } %></P>
             </span>
           </footer>
+        </a>
         </article>
-      </a>
     </div>
 </script>
