add confirm trash post

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4306,7 +4306,33 @@ white = #fff
 				background #00adf2
 				color white
 
-
+.blog-single-trash
+	max-width: 700px;
+	margin 0 auto 2em auto
+	padding 25px 0
+	border-top: solid 1px #ddd;
+	border-bottom: solid 1px #ddd;
+	p
+		font-family: 'Montserrat',sans-serif;
+		display: inline-block;
+		color: #aaa;
+		font-size: .85em;
+	.button
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 13.3px
+		color #666
+		letter-spacing 2px
+		padding 10px 25px
+		border-radius 4px
+		border solid 1px #ddd
+		margin-left 20px
+		cursor pointer
+		display inline-block
+		&.trash
+			color #fc636b
+			border-color #fc636b
+			
 .blog-single-user
 	display flex
 	align-items center
@@ -4345,9 +4371,6 @@ white = #fff
 		border solid 1px #ddd
 		margin-left 20px
 		cursor pointer
-		&.trash
-			color #fc636b
-			border-color #fc636b
 
 .blog-single-popular
 	background #27282a
