--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -77,8 +77,13 @@
   {% if edit %}
   <div class="grid-container">
     <div class="grid-100">
-      <div class="blog-single-user">
+      <div class="blog-single-trash">
         <a class="button following trash">ELIMINAR</a>
+        <div>
+          <p style="display: inline-block;">Seguro que desea eliminar el post?</p>
+          <a class="button following">CANCELAR</a>
+          <a class="button following trash">ELIMINAR</a>
+        </div>
       </div>
     </div>
   </div>
