categorye blog view

--- a/app/views/blog/category.html
+++ b/app/views/blog/category.html
@@ -16,10 +16,10 @@
       </div>
       <div class="socials">
         <p>Síguenos:</p>
-        <a href="#" class="bi_logo-facebook"></a>
-        <a href="#" class="bi_logo-twitter"></a>
-        <a href="#" class="bi_logo-instagram"></a>
-        <a href="#" class="bi_web-rss"></a>
+          <a href="https://www.facebook.com/artemanifiesto" class="bi_logo-facebook"></a>
+          <a href="https://twitter.com/artemanifiesto" class="bi_logo-twitter"></a>
+          <a href="https://www.instagram.com/artemanifiesto/" class="bi_logo-instagram"></a>
+          <a href="#" class="bi_web-rss"></a>
       </div>
     </header>
   </div>
@@ -34,6 +34,10 @@
   </div>
   <div class="grid-100 u-padding-top-30 u-padding-bottom-30"></div>
 
+  <div class="grid-100 u-padding-top-30 u-padding-bottom-30">
+    <div class="loader extra-small gray"></div>
+  </div>
+  
 {% endblock %}
 
 
