remove featured in post card

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4242,6 +4242,8 @@ white = #fff
 		font-family: 'PT Serif', serif;
 		font-size 12px
 		color #cdd7d8
+		&.active
+			color #8bd393 
 
 	.social
 		font-family: 'Montserrat',sans-serif;
