--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -56,7 +56,9 @@
             <span class="date status">No guardado</span>
             &nbsp; &nbsp; &nbsp;
             <span class="social"><i class="fa fa-heart"></i> {{ post.likes }}</span> &nbsp; &nbsp;
-            <span class="social"><i class="fa fa-comment"></i> {{ post.reviews }}</span> &nbsp; &nbsp;
+            <span class="social"><i class="fa fa-comment"></i> {{ post.reviews }}</span> &nbsp; &nbsp; &nbsp;
+            <a href="#" class="date">Recomendar</a>
+            <a href="#" class="date active"><i class="fa fa-check"></i> Recomendado</a>
           </div>
         </div>
       </div>
