changes in blog

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4332,7 +4332,13 @@ white = #fff
 		&.trash
 			color #fc636b
 			border-color #fc636b
-			
+		&.publish
+			color #b8fbbb
+			border-color #b8fbbb
+		&.am
+			color #ed86ff
+			border-color #ed86ff
+
 .blog-single-user
 	display flex
 	align-items center
