--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -31,7 +31,7 @@
               {% if user %}
                 <a href="/feed" class="feed-menu">ART FEED</a>
               {% endif %}
-							<a href="/works/category/all/page-1" class="works-menu">OBRAS</a>
+							<a href="/works/category/all/page-1/?featured=1" class="works-menu">OBRAS</a>
 							<a href="/users/specialty/all/page-1" class="users-menu">ARTISTAS</a>
 							<a href="/collections/category/all/page-1" class="collections-menu">COLECCIONES</a>
 						</ul>
