--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -103,7 +103,7 @@
 			<div class="categories">
 				{% for category in categories %}
 				<div class="categorie-container">
-					<a href="/works/category/{{category.nameSlugify}}/page-1/" class="categorie" style="background-image: url('{{category.photo}}');">
+					<a href="/works/category/{{category.nameSlugify}}/page-1/?featured=1" class="categorie" style="background-image: url('{{category.photo}}');">
 						<div class="cover"></div>
 						<p>{{category.name}}</p>
 					</a>
@@ -191,7 +191,7 @@
 
 	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
-			<a href="/works/category/all/page-1/" class="am-More-button">Quiero ver más cosas geniales</a>
+			<a href="/works/category/all/page-1/?featured=1" class="am-More-button">Quiero ver más cosas geniales</a>
 		</div>
 	</div>
 
